refactor: 删掉导致项目编译失败ksp失败的测试代码。