@@ -3,10 +3,6 @@ plugins {
     alias(libs.plugins.kotlin.compose)
 }
 
-val composeDebugMainJar = project(":compose").layout.buildDirectory.file(
-    "intermediates/aar_main_jar/debug/syncDebugLibJars/classes.jar"
-)
-
 android {
     namespace = "com.kulipai.luacompose"
     compileSdk {
@@ -37,14 +33,6 @@ android {
     buildFeatures {
         compose = true
     }
-    testOptions {
-        unitTests {
-            isReturnDefaultValues = true
-            all {
-                it.jvmArgs("-Xverify:none")
-            }
-        }
-    }
 }
 
 dependencies {
@@ -65,11 +53,5 @@ dependencies {
 
     implementation(project(":compose"))
 
-    testImplementation(kotlin("reflect"))
-    testImplementation("junit:junit:4.13.2")
-    testRuntimeOnly(files(composeDebugMainJar))
-}
 
-tasks.matching { it.name == "testDebugUnitTest" }.configureEach {
-    dependsOn(":compose:syncDebugLibJars")
 }
